[package]
name = "btinfo"
version = "0.0.8"
edition = "2021"

[dependencies]
zbus = "5.5.0"
zvariant = "5.4.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
anyhow = { version = "1.0.98" }
serde = { version = "1", features = ["derive"] }
futures-util = { version = "0.3.31" }
sysinfo = "0.35.0"
libc = { version = "0.2.172" }
regex = "1.11.1"
xdg = "3.0.0"
toml = "0.8.22"
env_logger = "0.11.8"
log = "0.4.27"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"

[[bin]]
name = "dbusbtinfo"
path = "src/bin/dbusbtinfo.rs"

[[bin]]
name = "playground"
path = "src/bin/playground.rs"

[[bin]]
name = "dbusevents"
path = "src/bin/dbusevents.rs"
